2008-10-11 mentaer <sstein@geo.uzh.ch>
	extended Thiessen polygon creation to be aware of a delineating
	background polygon (i.e. points are sorted out and polygon is used
	for clipping)  
	changed:
	org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn
	
2008-10-11 mentaer <sstein@geo.uzh.ch>
	added Larry's AutoAssignAttributePlugIn from ISA Tools
	org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn
	
2008-09-09 beckerl <becker.larry@gmail.com>
      Enabled the Union check box when Get Distance from Attributes is checked.
      src/com/vividsolutions/jump/workbench/ui/plugin/analysis/BufferPlugIn.java
     
2008-09-09 mentaer <sstein@geo.uzh.ch>
	added patch by Bing to parse single bytes in dbf files, which is better 
	for chinese characters [see email topic on googlegroups: "patchs for 
	reading dbf files with multi-bytes character columns"]
	src/com/vividsolutions/jump/io/ShapefileReader.java:
	src/org/geotools/dbffile/DbfFile.java:

2008-08-26 beckerl <becker.larry@gmail.com>
      Added error checking to prevent problems after pasting a Style 
      that refers to a missing Attribute.
      src/com/vividsolutions/jump/workbench/ui/style/PasteStylesPlugIn.java

2008-08-18 Andreas Schmitz <schmitz@lat-lon.de>
	* src/com/vividsolutions/jump/workbench/ui/snap/SnapToFeaturesPolicy.java:
	Updated snapping policy to allow snapping to lines of multi polygons
	(and geometry collections in general).

2008-08-18 Andreas Schmitz <schmitz@lat-lon.de>
	* scripts/openjump.sh: Fixed the startup script to include the default
	plugins file even in development environments.

2008-08-05 beckerl <becker.larry@gmail.com>
      Changed BufferPlugIn to take advantage of new UnaryUnionOp.union() method of JTS 1.9
      src/com/vividsolutions/jump/workbench/ui/plugin/analysis/BufferPlugIn.java

2008-08-04 Andreas Schmitz <schmitz@lat-lon.de>
      * src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java:
      Fixed null pointer when reading from project file.
