@@ -14,6 +14,7 @@
 	<plug-in>org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.layer.ExtractLayerInFence</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.layer.ExtractLayersByAttribute</plug-in>
+	<plug-in>org.openjump.core.ui.plugin.edit.ClipToFencePlugIn</plug-in>
 	<!---  ======================================== /-->
 	<!--  			menu VIEW 						/-->
 	<!--- ========================================= /-->		
